# userAuthFastapi

./: decorators.py  generators.py  main.py  oop.py  pyproject.toml  requirements.txt
app/core/: config.py  deps.py  security.py
app/db/: base.py  schema.py  user.py
app/routers/: users.py
app/schemas/: users.py
app/services/: users.py
app/utils/: create_admin.py
